@@ -46,10 +46,14 @@ public class AsStringLocalStepTest extends StepTest {
         assertEquals("1", __.__(1).asString(Scope.local).next());
         assertArrayEquals(new String[]{"1", "2"}, __.inject(1, 2).asString(Scope.local).toList().toArray());
         assertArrayEquals(new String[]{}, ((List<?>) __.__(Collections.emptyList()).asString(Scope.local).next()).toArray());
-        assertArrayEquals(new String[]{"1", "2", null}, ((List<?>) __.__(Arrays.asList(1, 2, null)).asString(Scope.local).next()).toArray());
 
         assertArrayEquals(new String[]{"1test", "2test"},
                 __.__(Arrays.asList(1, 2)).asString(Scope.local).unfold().concat("test").toList().toArray());
+    }
+
+    @Test(expected = IllegalArgumentException.class)
+    public void shouldThrowExceptionWhenNullInput() {
+        __.__(Arrays.asList(1, 2, null)).asString(Scope.local).next();
     }
 
 }
