@@ -1489,7 +1489,6 @@ const gremlins = {
     g_V_valuesXnameX_order_fold_toLowerXlocalX: [function({g}) { return g.addV("person").property("name", "MARKO").property("age", 29).as("marko").addV("person").property("name", "VADAS").property("age", 27).as("vadas").addV("software").property("name", "LOP").property("lang", "java").as("lop").addV("person").property("name", "JOSH").property("age", 32).as("josh").addV("software").property("name", "RIPPLE").property("lang", "java").as("ripple").addV("person").property("name", "PETER").property("age", 35).as("peter").addE("knows").from_("marko").to("vadas").property("weight", 0.5).addE("knows").from_("marko").to("josh").property("weight", 1.0).addE("created").from_("marko").to("lop").property("weight", 0.4).addE("created").from_("josh").to("ripple").property("weight", 1.0).addE("created").from_("josh").to("lop").property("weight", 0.4).addE("created").from_("peter").to("lop").property("weight", 0.2) }, function({g}) { return g.V().values("name").order().fold().toLower(Scope.local) }], 
     g_injectXfeature_test_nullX_toUpper: [function({g}) { return g.inject("feature", "tESt", null).toUpper() }], 
     g_injectXfeature_test_nullX_toUpperXlocalX: [function({g}) { return g.inject(["feature", "tESt", null]).toUpper(Scope.local) }], 
-    g_injectXfeature_test_nullX_asString_toUpper: [function({g}) { return g.inject("feature", "tESt", null).asString().toUpper() }], 
     g_injectXListXa_bXX_toUpper: [function({g}) { return g.inject(["a", "b"]).toUpper() }], 
     g_V_valuesXnameX_toUpper: [function({g}) { return g.V().values("name").toUpper() }], 
     g_V_valuesXnameX_toUpperXlocalX: [function({g}) { return g.V().values("name").toUpper(Scope.local) }], 
