@@ -1461,7 +1461,6 @@ world.gremlins = {
     'g_V_valuesXnameX_order_fold_toLowerXlocalX': [(lambda g:g.add_v('person').property('name', 'MARKO').property('age', 29).as_('marko').add_v('person').property('name', 'VADAS').property('age', 27).as_('vadas').add_v('software').property('name', 'LOP').property('lang', 'java').as_('lop').add_v('person').property('name', 'JOSH').property('age', 32).as_('josh').add_v('software').property('name', 'RIPPLE').property('lang', 'java').as_('ripple').add_v('person').property('name', 'PETER').property('age', 35).as_('peter').add_e('knows').from_('marko').to('vadas').property('weight', 0.5).add_e('knows').from_('marko').to('josh').property('weight', 1.0).add_e('created').from_('marko').to('lop').property('weight', 0.4).add_e('created').from_('josh').to('ripple').property('weight', 1.0).add_e('created').from_('josh').to('lop').property('weight', 0.4).add_e('created').from_('peter').to('lop').property('weight', 0.2)), (lambda g:g.V().values('name').order().fold().to_lower(Scope.local))], 
     'g_injectXfeature_test_nullX_toUpper': [(lambda g:g.inject('feature', 'tESt', None).to_upper())], 
     'g_injectXfeature_test_nullX_toUpperXlocalX': [(lambda g:g.inject(['feature', 'tESt', None]).to_upper(Scope.local))], 
-    'g_injectXfeature_test_nullX_asString_toUpper': [(lambda g:g.inject('feature', 'tESt', None).as_string().to_upper())], 
     'g_injectXListXa_bXX_toUpper': [(lambda g:g.inject(['a', 'b']).to_upper())], 
     'g_V_valuesXnameX_toUpper': [(lambda g:g.V().values('name').to_upper())], 
     'g_V_valuesXnameX_toUpperXlocalX': [(lambda g:g.V().values('name').to_upper(Scope.local))], 
